# GO_Kasir/docs/swagger.json
@@ -1406,6 +1406,42 @@
                 }
             }
         },
+        "/api/transaksi/voucher/{code}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Crud Transaksi"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Voucer Code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseDataSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/voucer": {
             "get": {
                 "consumes": [
@@ -1793,9 +1829,6 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 },
                 "password": {
